--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+      voluptatum velit aut beatae nam minima fugiat quisquam consequuntur
+      perferendis modi.
+    </p>
+  </body>
 </html>
