added button conponent

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="btn__flex">
+      <button class="btn btn--primary btn--no-border btn--block">
+        Buy Now
+      </button>
+    </div>
+  </body>
 </html>
