added input components part 1

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="btn__flex">
-      <button class="btn btn--primary btn--no-border btn--block">
-        Buy Now
-      </button>
+    <div class="input-group">
+      <input
+        type="text"
+        class="input"
+        placeholder="Enter domain name here..."
+      />
+      <button class="btn btn--accent">Search</button>
     </div>
   </body>
 </html>
