--- a/index.html
+++ b/index.html
@@ -15,28 +15,10 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <blockquote class="quote">
-      <p class="quote__text">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
-        quis repellendus reprehenderit ratione eum! Nisi neque debitis
-        perspiciatis officiis minus magni cum. Sapiente ut ducimus eveniet
-        pariatur eligendi dolore enim velit eius quasi tenetur totam deleniti
-        similique, itaque nam aliquid assumenda laudantium accusantium ipsam.
-        Nulla doloremque neque nam quisquam voluptas?
-      </p>
-      <footer>
-        <div class="media">
-          <div class="media__image">
-            <svg class="icon icon-primary quote__line">
-              <use xlink:href="images/sprite.svg#line"></use>
-            </svg>
-          </div>
-          <div class="media__body">
-            <h3 class="quote__author">John Smith</h3>
-            <p class="quote__organization">ABC Company</p>
-          </div>
-        </div>
-      </footer>
-    </blockquote>
+    <div class="grid grid--1x2 grid--1x3">
+      <div style="height: 100px; background: gold"></div>
+      <div style="height: 100px; background: dodgerblue"></div>
+      <div style="height: 100px; background: red"></div>
+    </div>
   </body>
 </html>
