--- a/index.html
+++ b/index.html
@@ -10,15 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400,600,700&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <div class="grid grid--1x2 grid--1x3">
-      <div style="height: 100px; background: gold"></div>
-      <div style="height: 100px; background: dodgerblue"></div>
-      <div style="height: 100px; background: red"></div>
-    </div>
-  </body>
+  <body style="padding: 5rem"></body>
 </html>
