--- a/index.html
+++ b/index.html
@@ -13,5 +13,19 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body style="padding: 5rem"></body>
+  <body>
+    <div class="collapsible">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+        <svg class="icon icon--white collapsible__chevron">
+          <use xlink:href="images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+      <div class="collapsible__content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate velit
+        quae quas dolore modi quisquam! Quos quas quaerat eaque voluptatem.
+      </div>
+    </div>
+    <script src="code/main.js"></script>
+  </body>
 </html>
