--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="collapsible">
-      <header class="collapsible__header">
-        <h2 class="collapsible__heading">Item 1</h2>
-        <svg class="icon icon--white collapsible__chevron">
-          <use xlink:href="images/sprite.svg#chevron"></use>
-        </svg>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis,
+          nisi.
+        </p>
       </header>
-      <div class="collapsible__content">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate velit
-        quae quas dolore modi quisquam! Quos quas quaerat eaque voluptatem.
+    </section>
+    <section class="block block--dark block--skewed-left">
+      <div class="container">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis,
+          nisi.
+        </p>
       </div>
-    </div>
+    </section>
     <script src="code/main.js"></script>
   </body>
 </html>
