validation for html and css; added package.json.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>Moshify - Go Online For Just $9</title>
+    <meta
+      name="description"
+      content="Deploy Your website in less than 60 seconds"
+    />
+    <meta property="og:title" content="Moshify" />
+    <meta property="og:url" content="http://Moshify.com" />
+    <meta property="og:image" content="/images/ipad.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -153,7 +160,9 @@
     <section>
       <header class="block__header">
         <h2>Host on the Cloud to Keep Growing</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, sed?</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, sed?
+        </p>
       </header>
       <article class="grid grid--1x2 feature">
         <div class="feature__content" data-aos="fade-right">
@@ -165,8 +174,8 @@
           <h3 class="feature__heading">Super Easy to Use</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem vitae
-            consectetur nesciunt corporis a ducimus deserunt perferendis
-            magnam harum repellendus.
+            consectetur nesciunt corporis a ducimus deserunt perferendis magnam
+            harum repellendus.
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
@@ -178,49 +187,43 @@
               images/easyMobileRetina2x.webp 2x
             "
           />
-            <source
-              type="image/jpg"
-              srcset="
-                images/easyMobile.jpg         1x,
-                images/easyMobileRetina2x.jpg 2x
-              "
-            />
-            <img
-              class="feature__image"
-              src="images/easyMobileRetina2x.jpg"
-              alt=""
-            />
-          </picture>
+          <source
+            type="image/jpg"
+            srcset="images/easyMobile.jpg 1x, images/easyMobileRetina2x.jpg 2x"
+          />
+          <img
+            class="feature__image"
+            src="images/easyMobileRetina2x.jpg"
+            alt=""
+          />
+        </picture>
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
-            <span class="icon-container">
-              <svg class="icon icon--primary">
-                <use xlink:href="images/sprite.svg#settings"></use>
-              </svg>
-            </span>
-            <h3 class="feature__heading">WordPress made easy</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem vitae
-              consectetur nesciunt corporis a ducimus deserunt perferendis
-              magnam harum repellendus.
-            </p>
-            <a href="#" class="link-arrow">Learn More</a>
-          </div>
-          <picture>
-            <source
-              type="image/webp"
-              srcset="
-                images/wordpressMobile.webp 1x,
-                images/wordpress@2x.webp    2x
-              "/>
-            <source
-              type="image/jpg"
-              srcset="images/wordpressMobile.jpg 1x, images/wordpress@2x.jpg 2x"
-            />
-            <img class="feature__image" src="images/wordpress.jpg" alt="" />
-          </picture>
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#settings"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">WordPress made easy</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem vitae
+            consectetur nesciunt corporis a ducimus deserunt perferendis magnam
+            harum repellendus.
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
         </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/wordpressMobile.webp 1x, images/wordpress@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/wordpressMobile.jpg 1x, images/wordpress@2x.jpg 2x"
+          />
+          <img class="feature__image" src="images/wordpress.jpg" alt="" />
+        </picture>
       </article>
     </section>
 
@@ -243,7 +246,8 @@
               <div class="media__body">
                 <h3 class="media__title">Easy Start & Managed Updates</h3>
                 <p>
-                  Our cloud plans include easy onboarding for new and existing sites and managed WordPress and WooCommerce auto-updates. 
+                  Our cloud plans include easy onboarding for new and existing
+                  sites and managed WordPress and WooCommerce auto-updates.
                 </p>
               </div>
             </div>
@@ -258,7 +262,8 @@
               <div class="media__body">
                 <h3 class="media__title">Staging, Git & WP-CLI</h3>
                 <p>
-                  We make your WordPress and WooCommerce development flow easier with a convenient staging tool and Git and WP-CLI integration.
+                  We make your WordPress and WooCommerce development flow easier
+                  with a convenient staging tool and Git and WP-CLI integration.
                 </p>
               </div>
             </div>
@@ -273,21 +278,23 @@
               <div class="media__body">
                 <h3 class="media__title">Dynamic Caching & More</h3>
                 <p>
-                  Speed up your WordPress and Woo sites with our SG Optimizer plugin through smart dynamic caching and multiple other performance optimizations.
+                  Speed up your WordPress and Woo sites with our SG Optimizer
+                  plugin through smart dynamic caching and multiple other
+                  performance optimizations.
                 </p>
               </div>
             </div>
           </li>
         </ul>
-        </div>
       </div>
     </section>
 
     <section class="block">
-      <header class="block__header">
+      <header class="block__header" data-aos="zoom-in">
         <h2>What our Customers are Saying</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam, amet.
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam,
+          amet.
         </p>
       </header>
     </section>
@@ -303,9 +310,9 @@
         </div>
         <blockquote class="quote">
           <p class="quote__text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt optio
-            officiis dolore earum error eaque perferendis laudantium sed praesentium
-            dolorum.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+            optio officiis dolore earum error eaque perferendis laudantium sed
+            praesentium dolorum.
           </p>
           <footer>
             <div class="media">
@@ -330,8 +337,8 @@
           <h2 class="callout__heading">Ready to Get Started?</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
-            voluptate tempora qui distinctio consequatur aliquid pariatur cupiditate
-            quas cum fugit.
+            voluptate tempora qui distinctio consequatur aliquid pariatur
+            cupiditate quas cum fugit.
           </p>
         </div>
         <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
@@ -341,12 +348,12 @@
     <footer class="block block--dark footer">
       <div class="container grid footer__sections">
         <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Products</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Website Hosting</a></li>
@@ -356,12 +363,12 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Company</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <div class="collapsible__content">
               <ul class="list">
@@ -373,12 +380,12 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Support</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Contact</a></li>
@@ -388,12 +395,12 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Domains</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Domain Checker</a></li>
@@ -402,17 +409,17 @@
             </ul>
           </div>
         </section>
-        <section class="footer__brand">
+        <div class="footer__brand">
           <img src="images/logo.svg" alt="" />
           <p class="footer__copyright">Copyright 2020 Mosh Hamedani</p>
-        </section>
+        </div>
       </div>
     </footer>
     <script src="code/main.js"></script>
     <script src="code/toggle.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-    AOS.init();
+      AOS.init();
     </script>
   </body>
 </html>
