--- a/playground.html
+++ b/playground.html
@@ -14,17 +14,25 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <nav class="nav collapsible">
-      <a href="/"><img class="nav__brand" src="images/logo.png" alt="" /></a>
-      <svg class="icon icon--white nav__toggler">
-        <use xlink:href="images/sprite.svg#menu"></use>
-      </svg>
-      <ul class="list nav__list collapsible__content">
-        <li class="nav__item"><a class="nav__anchor" href="#">Hosting</a></li>
-        <li class="nav__item"><a class="nav__anchor" href="#">VPS</a></li>
-        <li class="nav__item"><a class="nav__anchor" href="#">Domain</a></li>
-        <li class="nav__item"><a class="nav__anchor" href="#">Pricing</a></li>
-      </ul>
-    </nav>
+    <!-- verified the folowing components:
+      navbar;
+      hero;
+      block-domain;
+      block-plan;
+ToDo: block-testamonial, block-showcase,callout, footer, 
+     -->
+    <div class="callout callout--primary">
+      <div class="grid grid--1x2">
+        <div class="callout__content">
+          <h2 class="callout__heading">Ready to Get Started?</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+            voluptate tempora qui distinctio consequatur aliquid pariatur
+            cupiditate quas cum fugit.
+          </p>
+        </div>
+        <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
+      </div>
+    </div>
   </body>
 </html>
