--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <nav class="nav collapsible">
         <a href="/"><img class="nav__brand" src="images/logo.png" alt="" /></a>
         <svg class="icon icon--white nav__toggler">
-          <use xlink:href="images/sprite.svg#menu"></use>
+          <use href="images/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item"><a class="nav__anchor" href="#">Hosting</a></li>
@@ -75,7 +75,7 @@
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
-            <use xlink:href="images/sprite.svg#search"></use>
+            <use href="images/sprite.svg#search"></use>
           </svg>
           Search
         </button>
@@ -168,7 +168,7 @@
         <div class="feature__content" data-aos="fade-right">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#easy"></use>
+              <use href="images/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Super Easy to Use</h3>
@@ -202,7 +202,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#settings"></use>
+              <use href="images/sprite.svg#settings"></use>
             </svg>
           </span>
           <h3 class="feature__heading">WordPress made easy</h3>
@@ -240,7 +240,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#snap"></use>
+                  <use href="images/sprite.svg#snap"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -256,7 +256,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#growth"></use>
+                  <use href="images/sprite.svg#growth"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -272,7 +272,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#wordpress"></use>
+                  <use href="images/sprite.svg#wordpress"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -304,7 +304,7 @@
           <img src="images/testimonial.jpg" alt="A happy, smiling customer" />
           <span class="icon-container icon-container--accent">
             <svg class="icon icon--white icon--small">
-              <use xlink:href="images/sprite.svg#quotes"></use>
+              <use href="images/sprite.svg#quotes"></use>
             </svg>
           </span>
         </div>
@@ -318,7 +318,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary quote__line">
-                  <use xlink:href="images/sprite.svg#line"></use>
+                  <use href="images/sprite.svg#line"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -351,7 +351,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Products</h2>
             <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -366,7 +366,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Company</h2>
             <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -383,7 +383,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Support</h2>
             <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -398,7 +398,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Domains</h2>
             <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
